Changes for 1.0alpha11:

 - no full list of triggers and items will be shown
 - deleted column triggers.lastcheck
 - fixed PostgreSQL upgrade patch to 1.0alpha10
 - if item.history==0, not values will be added to table history for this item
 - added directory upgrades/dbpatches/1.0alpha10_to_1.0alpha11/

 - added set of keys proc_cnt[*]
 - when pressing Acive in list of items, [all] selected unstead of [Server]. Fixed.
 - some triggers have incorrect status. Fixed.
 - global variable $ERROR_MSG will show details of operation failure
 - fixed both zabbix_trapper and zabbix_trapper to correctly change status of triggers

Changes for 1.0alpha10:

 - added support for trigger dependencies
 - added column dep_level to table TRIGGERS
 - added new host type: Workstation + frontends/php/images/sysmaps/Workstation.png
 - added table triger_depends
 - calls to perror() were changed to syslog() where possible
 - added status line to full screen version of form "Status of Triggers"
 - added directory upgrades/dbpatches/1.0alpha9_to_1.0alpha10/
 - removed parameters net[listen_21],net[listen_22],net[listen_25],net[listen_110],
   net[listen_143]
 - added parameters check_service[ftp],check_service[smtp],check_service[ssh],check_service[pop],
   check_service[nntp],check_service[imap]
 - added constant TRAPPERD_FORKS (default is 10)
 - added constant AGENTD_FORKS (default is 10)
 - minor fixes in PHP code
 - added some basic information on zabbix_trapperd to manual.txt
 - added zabbix_trapperd
 - minor fixes in manual.txt
 - check for filesystem /proc in configure.in
 - table "Supported parameters by platform" added to manual.txt
 - removed recommendation of PostgreSQL from manual.txt
 - use of /proc was changed to native calls to sysinfo where possible
 - fixed double appearing of complex triggers in list of triggers
 - added form for changing host details
 - All calculations are made in C code instead of SQL statements